2011-03-29  Geoffrey Garen  <ggaren@apple.com>

Reviewed by Darin Adler.

        ~25% regression on v8-splay in the SunSpider harness
        https://bugs.webkit.org/show_bug.cgi?id=56128

        I'm not sure if this is the root cause of the regression Stephanie
        measured, but it seems to get us back to previous v8-splay times.

        SunSpider reports no change. v8-splay says 41% faster.

        * runtime/Heap.cpp:
        (JSC::Heap::reset): Make marking proportional to 1X the size of the heap,
        not .5X the size of the heap. When the heap is large, this makes a big
        difference. (Our old heap growth policy matched this. You can see by
        looking at resizeBlocks in revisions prior to r77699.)


Canonical link: https://commits.webkit.org/72129@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82327 268f45cc-cd09-0410-ab3c-d52691b4dbfc